Really fix the open/close expand/collapse expander icon bug

--- a/plugins/redmine_treeky/assets/stylesheets/projects_tree_view.css
+++ b/plugins/redmine_treeky/assets/stylesheets/projects_tree_view.css
@@ -32,16 +32,17 @@ tr.child span.expander.dummy {
   cursor: default;
 }
 
-tr.parent span.expander {
-  background-image: url(../images/bullet_toggle_plus.png);
-  padding-left: 8px;
-  margin-left: 0;
-  cursor: pointer;
-}
 
 span.empty {
   text-align: right;
   width: 100%;
+  cursor: pointer;
+}
+
+tr.parent.closed span.expander {
+  background-image: url(../images/bullet_toggle_plus.png);
+  padding-left: 8px;
+  margin-left: 0;
   cursor: pointer;
 }
 
